--- a/docs/king-ghast.tex
+++ b/docs/king-ghast.tex
@@ -1,4 +1,7 @@
-\documentclass[oneside]{book}
+\PassOptionsToPackage{unicode=true}{hyperref} % options for packages loaded elsewhere
+\PassOptionsToPackage{hyphens}{url}
+%
+\documentclass[12pt,oneside]{krantz}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
@@ -6,32 +9,34 @@
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
+  \usepackage{textcomp} % provides euro and other symbols
 \else % if luatex or xelatex
-  \ifxetex
-    \usepackage{mathspec}
-  \else
-    \usepackage{fontspec}
-  \fi
+  \usepackage{unicode-math}
   \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
 \fi
 % use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 % use microtype if available
 \IfFileExists{microtype.sty}{%
-\usepackage{microtype}
+\usepackage[]{microtype}
 \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
-\usepackage[margin=1in]{geometry}
+\IfFileExists{parskip.sty}{%
+\usepackage{parskip}
+}{% else
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{6pt plus 2pt minus 1pt}
+}
 \usepackage{hyperref}
-\hypersetup{unicode=true,
+\hypersetup{
             pdftitle={King Ghast's Revenge},
             pdfauthor={Beckett Stephens},
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
-\usepackage{natbib}
-\bibliographystyle{plainnat}
 \usepackage{longtable,booktabs}
+% Fix footnotes in tables (requires footnote package)
+\IfFileExists{footnote.sty}{\usepackage{footnote}\makesavenoteenv{longtable}}{}
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -41,12 +46,6 @@
 % margins by default, and it is still possible to overwrite the defaults
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
-\IfFileExists{parskip.sty}{%
-\usepackage{parskip}
-}{% else
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{6pt plus 2pt minus 1pt}
-}
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
@@ -61,33 +60,22 @@
 \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
 \fi
 
-%%% Use protect on footnotes to avoid problems with footnotes in titles
-\let\rmarkdownfootnote\footnote%
-\def\footnote{\protect\rmarkdownfootnote}
-
-%%% Change title format to be more compact
-\usepackage{titling}
-
-% Create subtitle command for use in maketitle
-\newcommand{\subtitle}[1]{
-  \posttitle{
-    \begin{center}\large#1\end{center}
-    }
-}
-
-\setlength{\droptitle}{-2em}
-  \title{King Ghast's Revenge}
-  \pretitle{\vspace{\droptitle}\centering\huge}
-  \posttitle{\par}
-\subtitle{Book 3}
-  \author{Beckett Stephens}
-  \preauthor{\centering\large\emph}
-  \postauthor{\par}
-  \predate{\centering\large\emph}
-  \postdate{\par}
-  \date{2018-04-08}
+% set default figure placement to htbp
+\makeatletter
+\def\fps@figure{htbp}
+\makeatother
 
 \usepackage{booktabs}
+\usepackage{caption}
+\captionsetup[figure]{labelformat=empty}
+\usepackage[]{natbib}
+\bibliographystyle{plainnat}
+
+\title{King Ghast's Revenge}
+\providecommand{\subtitle}[1]{}
+\subtitle{Book 3}
+\author{Beckett Stephens}
+\date{2019-02-10}
 
 \begin{document}
 \maketitle
@@ -96,15 +84,17 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\chapter*{Preface}\label{preface}
-\addcontentsline{toc}{chapter}{Preface}
+\hypertarget{preface}{%
+\chapter*{Preface}\label{preface}}
 
-\includegraphics[width=3.12500in]{img/00-ghast.jpg}
+
+\includegraphics[width=3.125in,height=\textheight]{img/00-ghast.jpg}
 
 This book is about my adventures in a video game named Minecraft.
 
-\chapter*{About the Author}\label{about-the-author}
-\addcontentsline{toc}{chapter}{About the Author}
+\hypertarget{about-the-author}{%
+\chapter*{About the Author}\label{about-the-author}}
+
 
 Beckett Stephens is an aspiring author and illustrator. \emph{King
 Ghast's Revenge} is his second published work. Beckett also loves
@@ -112,21 +102,23 @@ Minecraft, Lego's, and Transformers, as well as making up endless
 stories while he walks. He currently lives in Maryland with his younger
 brother.
 
-\chapter*{Acknowledgements}\label{acknowledgements}
-\addcontentsline{toc}{chapter}{Acknowledgements}
+\hypertarget{acknowledgements}{%
+\chapter*{Acknowledgements}\label{acknowledgements}}
+
 
 Thanks to Mom for helping me edit \emph{King Ghast's Revenge}. And
 thanks to Dad for helping me publish it online. Also, thanks to
 Minecraft community for the inspiration that helped me make this book.
 
-\chapter{Rise of a Villain}\label{rise-of-a-villain}
+\hypertarget{rise-of-a-villain}{%
+\chapter{Rise of a Villain}\label{rise-of-a-villain}}
 
 My team decided to have a victory party for Herobrine's death, but
 someone had other ideas.
 
 In the Nether\ldots{}
 
-\includegraphics[width=4.16667in]{img/03-aaa.jpg}
+\includegraphics[width=4.16667in,height=\textheight]{img/03-aaa.jpg}
 
 King Ghast decided to fight for evil again. He went to The End to find
 Cindy, the witch, Will, the wither, and Elder, the Elder guardian. He
@@ -155,7 +147,8 @@ had found at the command block tower during my earlier adventures.
 I placed the command block in the missing spot and it worked. The
 command block powered all the weapons.
 
-\chapter{Party!}\label{party}
+\hypertarget{party}{%
+\chapter{Party!}\label{party}}
 
 I left the secret lab and found the party gear I needed in the mine. I
 went back to my base with the party gear. Three villages joined. We
@@ -163,7 +156,7 @@ danced, ate, played, and then King Ghast popped out of nowhere. The
 villages were damaged in King Ghast's attack. Many of the villagers were
 injured. Boom! Boom!! Boom!!! Booom!!!
 
-\includegraphics[width=5.20833in]{img/04-everyone.jpg}
+\includegraphics[width=5.20833in,height=\textheight]{img/04-everyone.jpg}
 
 A building had collapsed on Bob. I pulled rocks off and there was Bob.
 We finished the fight but Bob didn't make it; instead he died. During
@@ -171,13 +164,14 @@ the fight the bad guys got Herobrine's skull.
 
 In the end\ldots{}
 
-\includegraphics[width=3.12500in]{img/04-jar.jpg}
+\includegraphics[width=3.125in,height=\textheight]{img/04-jar.jpg}
 
 Cindy threw 100 gallons of bad magic on Herobrine's skull. But nothing
 happened. When Cindy was finished she said, ``Come back to me,
 Herobrine.'' And then she heard him whisper back, ``I will, I will.''
 
-\chapter{The Fight}\label{the-fight}
+\hypertarget{the-fight}{%
+\chapter{The Fight}\label{the-fight}}
 
 A few hours later\ldots{}
 
@@ -188,7 +182,7 @@ super speed machine. I yelled at the ghasts as I shot them, ``Get some
 TNT and you and you. You ghasts all get TNTs.'' Felix used the jumping
 machine to jump high and hit the flying Ghasts.
 
-\includegraphics[width=4.16667in]{img/07-attack.jpg}
+\includegraphics[width=4.16667in,height=\textheight]{img/07-attack.jpg}
 
 Aden used the speed machine to make tools, armor, and weapons super
 fast. I was talking about a plan when\ldots{}BOOM! I was shot with a bad
@@ -196,8 +190,8 @@ magic ball and I became evil.
 
 ``Give him a good magic jar'' said Felix and then threw one on me.
 
-\includegraphics[width=1.04167in]{img/06-creeper.jpg}
-\includegraphics[width=2.08333in]{img/06-dots.jpg}
+\includegraphics[width=1.04167in,height=\textheight]{img/06-creeper.jpg}
+\includegraphics[width=2.08333in,height=\textheight]{img/06-dots.jpg}
 
 We eventually scared off King Ghast.
 
@@ -212,7 +206,7 @@ Meanwhile\ldots{}
 That night I had a dream that Herobrine was alive, and he was a robot.
 ``Come and get me'' he said. I woke up. ``What happened?'' I wondered.
 
-\includegraphics[width=3.12500in]{img/09-herobrine.jpg}
+\includegraphics[width=3.125in,height=\textheight]{img/09-herobrine.jpg}
 
 My ghost Dad reappeared and said, ``You saw the future''.
 
@@ -225,12 +219,13 @@ and no one believed me, but my ghost Dad and Malek.
 We thought King Ghast was up to something, so we sent Malek to find out
 what he was doing.
 
-\chapter{Malek's Mission}\label{maleks-mission}
+\hypertarget{maleks-mission}{%
+\chapter{Malek's Mission}\label{maleks-mission}}
 
 Malek was sent to spy on King Ghast, and he found a factory and it was
 making a headless robot. He said, ``Is that Herobrine's robot body?''
 
-\includegraphics[width=3.12500in]{img/10-herobrine.jpg}
+\includegraphics[width=3.125in,height=\textheight]{img/10-herobrine.jpg}
 
 At my base\ldots{}
 
@@ -246,7 +241,8 @@ cow spy. Once Malek go back he told me about the important information
 and data he'd discovered. He had learned that King Ghast's plan was to
 travel to a different reality.
 
-\chapter{Cindy vs King Ghast}\label{cindy-vs-king-ghast}
+\hypertarget{cindy-vs-king-ghast}{%
+\chapter{Cindy vs King Ghast}\label{cindy-vs-king-ghast}}
 
 Cindy wanted to get Herobrine back but King Ghast wanted to stay on the
 throne. Everyone disagreed with King Ghast, so Cindy was now in charge.
@@ -257,7 +253,8 @@ put on. It would take a few hours for him to come back to life. Now
 Cindy had to distract me so I wouldn't destroy Herobrine before he came
 back to life. Cindy got Will, Elder, and King Ghast and went to find me.
 
-\chapter{The Big Battle}\label{the-big-battle}
+\hypertarget{the-big-battle}{%
+\chapter{The Big Battle}\label{the-big-battle}}
 
 Cindy, Will, Elder, and King Ghast went to find me. When they did find
 me, I was standing right next to Elder with my sword. KABLAM!!! Elder
@@ -271,22 +268,16 @@ friends had been captured and put in the cage. I was the only one left.
 I said, ``Bring it on!'' Some magic got on my sword from King Ghast's
 fireball.
 
-\includegraphics[width=1.04167in]{img/13-sword.jpg}
+\includegraphics[width=1.04167in,height=\textheight]{img/13-sword.jpg}
 
 Luckily that bad magic did not touch my hand, and I used it to kill King
 Ghast. Will ran away. Suddenly a portal opened and Cindy ran away. I
 said, ``I'm too late!''
 
-\includegraphics[width=1.04167in]{img/14-portal.jpg}
+\includegraphics[width=1.04167in,height=\textheight]{img/14-portal.jpg}
 
 A portal appeared and Herobrine stepped out. He was huge with a robot
 body and a skull head. On his shoulders were two bad magic jars.
-Herobrine said,
-
-\textbf{``I'm back and you won't stop me!''}
-
-\chapter*{The End}\label{the-end}
-\addcontentsline{toc}{chapter}{The End}
-
+Herobrine said, \textbf{``I'm back and you won't stop me!''}
 
 \end{document}
