--- a/docs/king-ghast.tex
+++ b/docs/king-ghast.tex
@@ -29,7 +29,7 @@
 }
 \usepackage{hyperref}
 \hypersetup{
-            pdftitle={King Ghast's Revenge},
+            pdftitle={Book 3: King Ghast's Revenge},
             pdfauthor={Beckett Stephens},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -71,9 +71,7 @@
 \usepackage[]{natbib}
 \bibliographystyle{plainnat}
 
-\title{King Ghast's Revenge}
-\providecommand{\subtitle}[1]{}
-\subtitle{Book 3}
+\title{Book 3: King Ghast's Revenge}
 \author{Beckett Stephens}
 \date{2019-02-10}
 
